# SilentPlayer

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rust-toolchain.toml
apple/PlayerApp/: Package.swift  README.md
apple/PlayerApp/Plugins/PlayerSharedSmokeTestPlugin/: Plugin.swift
apple/PlayerApp/Resources/: LaunchScreen.storyboard  Silent.icns
apple/PlayerApp/Resources/AppIcon.xcassets/AppIcon.appiconset/: Contents.json
apple/PlayerApp/Sources/PlayerMac/: PlayerMacApp.swift
apple/PlayerApp/Sources/PlayerRustFFI/: player_ffi_shim.c
apple/PlayerApp/Sources/PlayerRustFFI/include/: player_ffi.h
apple/PlayerApp/Sources/PlayerShared/: AnalyzerWorker.swift  AppModel.swift  ContentView.swift  LibraryWorker.swift  MetadataDefaults.swift  PhoneContentView.swift  PhoneDisplayText.swift  PlaybackSystemIntegration.swift  RustPlayerClient.swift  TrackItem.swift
apple/PlayerApp/Sources/PlayerSharedSmokeTests/: main.swift
apple/PlayerApp/Sources/PlayeriOS/: PlayeriOSApp.swift
apple/PlayerApp/Tests/PlayerSharedTests/: BuildOnly.swift
crates/player_analysis_ebur128/: Cargo.toml
crates/player_analysis_ebur128/src/: lib.rs
crates/player_analyzer/: Cargo.toml
crates/player_analyzer/src/: main.rs
crates/player_analyzer/tests/: worker.rs
crates/player_audio_rodio/: Cargo.toml
crates/player_audio_rodio/src/: lib.rs
crates/player_audio_rodio/tests/: playback_smoke.rs
crates/player_cli/: Cargo.toml
crates/player_cli/src/: command.rs  error.rs  main.rs  output.rs  shell.rs
crates/player_cli/tests/: api_coverage.rs  cli.rs
crates/player_core/: Cargo.toml
crates/player_core/src/: lib.rs  lifecycle.rs  loudness.rs  model.rs  playback.rs  playback_error.rs
crates/player_engine/: Cargo.toml
crates/player_engine/src/: lib.rs
crates/player_error/: Cargo.toml
crates/player_error/src/: lib.rs
crates/player_ffi/: Cargo.toml
crates/player_ffi/src/: client.rs  lib.rs
crates/player_fingerprint/: Cargo.toml
crates/player_fingerprint/src/: lib.rs
crates/player_library_fs/: Cargo.toml
crates/player_library_fs/src/: lib.rs
crates/player_library_worker/: Cargo.toml
crates/player_library_worker/src/: main.rs
crates/player_library_worker/tests/: worker.rs
crates/player_metadata_lofty/: Cargo.toml
crates/player_metadata_lofty/src/: lib.rs
crates/player_store_sqlite/: Cargo.toml
crates/player_store_sqlite/src/: lib.rs
docs/: apple_integration.md  cli.md  loudness_normalization.md  music_view_model.md  product_design.md  rust_architecture.md
scripts/: build_ios_rust.sh  download_test_audio.sh  package_mac_app.sh  run_ios_device.sh  run_ios_simulator.sh  run_mac_swiftui.sh
test-assets/audio/: SOURCES.md
