[package]
name = "player_analysis_ebur128"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ebur128-stream = "0.2.0"
player_core = { path = "../player_core" }
player_error = { path = "../player_error" }
player_library_fs = { path = "../player_library_fs" }
player_store_sqlite = { path = "../player_store_sqlite" }
symphonia = { version = "0.5.5", features = ["aac", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }
