[package]
name = "player_analyzer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
player_analysis_ebur128 = { path = "../player_analysis_ebur128" }
player_core = { path = "../player_core" }
player_error = { path = "../player_error" }
player_library_fs = { path = "../player_library_fs" }
player_store_sqlite = { path = "../player_store_sqlite" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
