[package]
name = "silent_cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "silent"
path = "src/main.rs"

[dependencies]
player_analysis_ebur128 = { path = "../player_analysis_ebur128" }
player_error = { path = "../player_error" }
player_ffi = { path = "../player_ffi" }
player_library_fs = { path = "../player_library_fs" }
serde_json = "1.0.145"
