[package]
name = "player_fingerprint"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
blake3 = "1.8.2"
player_core = { path = "../player_core" }
player_error = { path = "../player_error" }
symphonia = { version = "0.5.5", features = ["aac", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }
