[package]
name = "player_store_sqlite"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
blake3 = "1.8.2"
player_core = { path = "../player_core" }
player_error = { path = "../player_error" }
rusqlite = { version = "0.40.1", features = ["bundled"] }
